--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,14 +23,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: ^1.1.2
-  cloud_firestore: ^1.0.7
-  firebase_core : ^1.1.0
-  shared_preferences: ^2.0.5
+  firebase_auth: 1.1.2
+  cloud_firestore: 1.0.7
+  firebase_core : 1.1.0
+  shared_preferences: 2.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.1
+  cupertino_icons: 1.0.1
+  firebase_analytics: 5.0.6
+  image_picker: 0.7.4
+  firebase_storage: 8.0.5
   
 
 dev_dependencies:
